# project-generator-installer

./: Cargo.toml
src/: file.rs  main.rs
