[package]
name = "project-generator-installer"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
whoami = "1.2.1"
dirs = "4.0.0"
error-chain = "0.12.4"

[target.'cfg(windows)'.dependencies]
winapi = "0.2.8"
kernel32-sys = "0.2.1"